discussion/kv_engine/173142/173142_rev10_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50984: Remove num-item-based checkpoint creation

Since Neo we have an implicit upper bound on the max number of
checkpoints (per bucket) that is logically given by (CMQuota /
CheckpointMaxSize).

Still, there are code paths that interfere with that and possibly break
that invariant. One of those is chk_max_items, which triggers checkpoint
creation when the user-defined max num of items has been queued into a
single checkpoint. Here we remove that trigger.

Change-Id: I2c49065a3d1b05493df8ce9865982d6393f9373f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-04-26 09:33:27.000000000
Message: 
Uploaded patch set 10: Patch Set 9 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-26 10:10:04.000000000
Message: 
Patch Set 10: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16992/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2111:5: error: no matching function for call to "checkgtfn" [clang-diagnostic-error]
    checkgt(firstCkptNumItems, 5ull, "");
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_common.h:104:5: note: expanded from macro "checkgt"
    checkgtfn(expected, actual, msg, __FILE__, __LINE__)
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_common.h:83:13: note: candidate template ignored: deduced conflicting types for parameter "T" ("unsigned long" vs. "unsigned long long")
static void checkgtfn(T exp, T got, const char *msg, const char *file,
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16992/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2111:5:
error: no matching function for call to "checkgtfn" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16992/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45644/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [9/93]: test dcp consumer noop...(49 ms) OK


99% tests passed, 2 tests failed out of 427

Total Test time (real) = 415.57 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45644/ )

Timeout of a CTest test 426/427 Test #312: ep_testsuite_xdcr.value_eviction.magma ..................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45644/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6653/ : FAILURE

Compile error at [2022-04-26T10:07:14.554Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2111:5:
error: no matching function for call to "checkgtfn"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6653/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18778/ : FAILURE

Compile error at [2022-04-26T10:05:30.262Z] ../kv_engine/engines/ep/tests/ep_testsuite_common.h:104:56:
error: no matching function for call to ?checkgtfn(uint64_t&, long long unsigned int, const char [1], const char [50], int)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18778/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6746/ : FAILURE

Compile error at [2022-04-26T09:43:30.819Z] ../kv_engine/engines/ep/tests/ep_testsuite_common.h:104:56:
error: no matching function for call to ?checkgtfn(uint64_t&, long long unsigned int, const char [1], const char [50], int)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6746/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19822/ : FAILURE

Compile error at [2022-04-26T10:05:22.173Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2111:5:
error: no matching function for call to "checkgtfn"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19822/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27196/ : FAILURE

Compile error at [2022-04-26T10:09:27.217Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2111:5:
error: no matching function for call to "checkgtfn"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27196/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19123/ : FAILURE

Compile error at [2022-04-26T10:06:31.957Z] ../kv_engine/engines/ep/tests/ep_testsuite_common.h:104:56:
error: no matching function for call to ?checkgtfn(uint64_t&, long long unsigned int, const char [1], const char [50], int)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19123/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17908/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [33/93]: test producer stream cursor movement...Exceeded maximum wait time of 60000000us waiting for stat "vb_0:open_checkpoint_id(checkpoint)" to be 30 (last value:31) - aborting.
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17908/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38340/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15960/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
